--- a/trip_generation.ipynb
+++ b/trip_generation.ipynb
@@ -2,24 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Example: Define zones and their attributes\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Example: Define zones and their attributes\n",
     "data = {\n",
@@ -32,7 +28,15 @@
     "}\n",
     "\n",
     "# Create a DataFrame\n",
-    "zones = pd.DataFrame(data)\n",
+    "zones = pd.DataFrame(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Define Trip Production and Attraction models\n",
     "# These coefficients are hypothetical and can be adjusted\n",
@@ -54,7 +58,34 @@
     "            attraction_coefficients[\"g\"] * row[\"Population\"] +\n",
     "            attraction_coefficients[\"h\"] * row[\"RetailArea\"] +\n",
     "            attraction_coefficients[\"i\"] * row[\"AverageIncome\"] +\n",
-    "            attraction_coefficients[\"j\"])\n",
+    "            attraction_coefficients[\"j\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trip Generation Results:\n",
+      "   Zone  Households  Employment  Population  RetailArea  AverageIncome  \\\n",
+      "0     1         100          50         300          20          40000   \n",
+      "1     2         200         300         600          50          50000   \n",
+      "2     3         150         100         450          30          45000   \n",
+      "3     4         250         400         800          60          55000   \n",
+      "\n",
+      "   Trip_Productions  Trip_Attractions  \n",
+      "0            117.40              88.8  \n",
+      "1            220.50             228.5  \n",
+      "2            168.45             135.4  \n",
+      "3            281.55             300.1  \n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# Apply the models\n",
     "zones[\"Trip_Productions\"] = zones.apply(calculate_trip_production, axis=1)\n",
